[gd_scene load_steps=79 format=2]

[ext_resource path="res://frames/Night.gd" type="Script" id=1]
[ext_resource path="res://textures/office1.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/consola.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://textures/Buttons/CameraRectButton.png" type="Texture" id=4]
[ext_resource path="res://textures/Buttons/MaskRectButton.png" type="Texture" id=5]
[ext_resource path="res://textures/mask.png" type="Texture" id=6]
[ext_resource path="res://textures/map.png" type="Texture" id=7]
[ext_resource path="res://textures/cam_03.jpg" type="Texture" id=8]
[ext_resource path="res://textures/cam_04.jpg" type="Texture" id=9]
[ext_resource path="res://textures/cam_05.jpg" type="Texture" id=10]
[ext_resource path="res://textures/cam_02.jpg" type="Texture" id=11]
[ext_resource path="res://textures/cam_06.jpg" type="Texture" id=12]
[ext_resource path="res://textures/cam_01.jpg" type="Texture" id=13]
[ext_resource path="res://textures/Buttons/Cam5On.png" type="Texture" id=14]
[ext_resource path="res://textures/Buttons/Cam5Off.png" type="Texture" id=15]
[ext_resource path="res://textures/Buttons/Cam6On.png" type="Texture" id=16]
[ext_resource path="res://textures/Buttons/Cam6Off.png" type="Texture" id=17]
[ext_resource path="res://textures/Buttons/Cam4On.png" type="Texture" id=18]
[ext_resource path="res://textures/Buttons/Cam3Off.png" type="Texture" id=19]
[ext_resource path="res://textures/Buttons/Cam4Off.png" type="Texture" id=20]
[ext_resource path="res://textures/Buttons/Cam1Off.png" type="Texture" id=21]
[ext_resource path="res://textures/Buttons/CrouchRectButton.png" type="Texture" id=22]
[ext_resource path="res://textures/crouch.jpg" type="Texture" id=23]
[ext_resource path="res://textures/Buttons/Cam1On.png" type="Texture" id=24]
[ext_resource path="res://textures/Buttons/Cam2Off.png" type="Texture" id=25]
[ext_resource path="res://textures/Buttons/Cam3On.png" type="Texture" id=26]
[ext_resource path="res://textures/Buttons/Cam2On.png" type="Texture" id=27]
[ext_resource path="res://textures/foes/Max1.png" type="Texture" id=28]
[ext_resource path="res://sounds/AmbienceSafe.ogg" type="AudioStream" id=29]
[ext_resource path="res://sounds/InOffice.ogg" type="AudioStream" id=30]
[ext_resource path="res://sounds/AmbienceIntercepting.ogg" type="AudioStream" id=31]
[ext_resource path="res://textures/Max.png" type="Texture" id=32]
[ext_resource path="res://textures/foes/Milka1.png" type="Texture" id=33]
[ext_resource path="res://textures/foes/Max3.png" type="Texture" id=34]
[ext_resource path="res://textures/foes/Max2.png" type="Texture" id=35]
[ext_resource path="res://sounds/Jumpscare.ogg" type="AudioStream" id=36]
[ext_resource path="res://textures/foes/Milka2.png" type="Texture" id=37]
[ext_resource path="res://textures/Door.png" type="Texture" id=38]
[ext_resource path="res://textures/Buttons/DoorOff.png" type="Texture" id=39]
[ext_resource path="res://textures/Buttons/DoorOn.png" type="Texture" id=40]
[ext_resource path="res://textures/foes/Milka3.png" type="Texture" id=41]
[ext_resource path="res://textures/foes/Milka4.png" type="Texture" id=42]
[ext_resource path="res://textures/Buttons/GenOff.png" type="Texture" id=43]
[ext_resource path="res://textures/Buttons/GenOn.png" type="Texture" id=44]
[ext_resource path="res://textures/Buttons/DoorDischarged.png" type="Texture" id=45]
[ext_resource path="res://textures/Buttons/genAlert1.png" type="Texture" id=46]
[ext_resource path="res://textures/Buttons/genAlert2.png" type="Texture" id=47]
[ext_resource path="res://sounds/phonecall1.ogg" type="AudioStream" id=48]
[ext_resource path="res://textures/Buttons/TurnRectButton.png" type="Texture" id=49]
[ext_resource path="res://textures/window.jpg" type="Texture" id=50]
[ext_resource path="res://textures/foes/Titanawanna2.png" type="Texture" id=51]
[ext_resource path="res://textures/foes/Titanawanna3.png" type="Texture" id=52]
[ext_resource path="res://textures/foes/Titanawanna4.png" type="Texture" id=53]
[ext_resource path="res://textures/foes/sbu1.png" type="Texture" id=54]
[ext_resource path="res://sounds/JumpscareFBI.ogg" type="AudioStream" id=55]
[ext_resource path="res://textures/Buttons/PlayAudioOff.png" type="Texture" id=56]
[ext_resource path="res://textures/Buttons/PlayAudioOn.png" type="Texture" id=57]
[ext_resource path="res://textures/foes/Masya1.png" type="Texture" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 69
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "cam_06",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "cam_03",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "cam_02",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "cam_04",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "cam_05",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "cam_01",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=14]
size = 132
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ ExtResource( 58 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "Titan",
"speed": 15.0
}, {
"frames": [ ExtResource( 54 ) ],
"loop": true,
"name": "SBU",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ) ],
"loop": true,
"name": "Masya",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 41 ) ],
"loop": true,
"name": "Milka",
"speed": 15.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 34 ) ],
"loop": true,
"name": "Max",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=20]
size = 62
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="AnimatedSprite" parent="."]
scale = Vector2( 1.36303, 1.36303 )
frames = SubResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="MaxInOffice" type="AnimatedSprite" parent="BG"]
visible = false
scale = Vector2( 0.419176, 0.419176 )
frames = SubResource( 2 )
centered = false

[node name="MilkaInOffice" type="AnimatedSprite" parent="BG"]
visible = false
position = Vector2( 1366.09, 338.576 )
scale = Vector2( 0.143459, 0.143459 )
frames = SubResource( 3 )
flip_h = true

[node name="DoorButton" type="TextureButton" parent="."]
margin_left = 2000.27
margin_top = 194.941
margin_right = 2142.27
margin_bottom = 336.941
toggle_mode = true
texture_normal = ExtResource( 39 )
texture_pressed = ExtResource( 40 )
texture_disabled = ExtResource( 45 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorItself" type="Sprite" parent="."]
visible = false
position = Vector2( 1873.26, 303.436 )
scale = Vector2( 1.07644, 1.34115 )
texture = ExtResource( 38 )

[node name="CamParent" type="Area2D" parent="."]

[node name="WindowBG" type="ColorRect" parent="CamParent"]
margin_left = -13.0
margin_top = -11.0
margin_right = 1034.0
margin_bottom = 613.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowItself" type="AnimatedSprite" parent="CamParent/WindowBG"]
position = Vector2( 288.917, 0 )
scale = Vector2( 0.375705, 0.375705 )
frames = SubResource( 4 )
centered = false

[node name="Titanawanna" type="AnimatedSprite" parent="CamParent/WindowBG"]
visible = false
position = Vector2( 491.445, 277.857 )
scale = Vector2( 1.70973, 1.70972 )
frames = SubResource( 5 )

[node name="SBU" type="AnimatedSprite" parent="CamParent/WindowBG"]
visible = false
position = Vector2( 494.924, 278.036 )
scale = Vector2( 0.537068, 0.537064 )
frames = SubResource( 6 )

[node name="CrouchItself" type="AnimatedSprite" parent="CamParent"]
visible = false
position = Vector2( 6.10352e-05, 600 )
rotation = -1.5708
scale = Vector2( 0.502271, 0.640772 )
frames = SubResource( 7 )
centered = false

[node name="Camera2D" type="Camera2D" parent="CamParent"]
anchor_mode = 0
current = true

[node name="Hint" type="Label" parent="CamParent"]
margin_left = 18.197
margin_top = 500.285
margin_right = 486.2
margin_bottom = 523.285
custom_fonts/font = SubResource( 8 )
text = "Зажмите пробел, чтобы остановить камеру"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Night" type="Label" parent="CamParent"]
margin_left = 941.161
margin_top = 6.29961
margin_right = 1013.16
margin_bottom = 29.2996
custom_fonts/font = SubResource( 8 )
text = "Ночь 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CamParent"]
margin_left = 941.161
margin_top = 26.2996
margin_right = 1021.16
margin_bottom = 46.2996
custom_fonts/font = SubResource( 9 )
text = "12 часов"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaskItself" type="AnimatedSprite" parent="CamParent"]
visible = false
frames = SubResource( 10 )
centered = false

[node name="CamerasButton" type="Sprite" parent="CamParent"]
position = Vector2( 256.387, 567 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 256.387, 567, 500, 65 )

[node name="Label" type="Label" parent="CamParent/CamerasButton"]
margin_left = -255.86
margin_top = -35.5414
margin_right = 255.14
margin_bottom = 34.4586
custom_fonts/font = SubResource( 11 )
text = "Камеры"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaskButton" type="Sprite" parent="CamParent"]
position = Vector2( 768.632, 567 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 768.632, 567, 500, 65 )

[node name="Label" type="Label" parent="CamParent/MaskButton"]
margin_left = -255.213
margin_top = -33.2692
margin_right = 255.787
margin_bottom = 36.7308
custom_fonts/font = SubResource( 11 )
text = "Маска"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamItself" type="ColorRect" parent="CamParent"]
margin_right = 1025.0
margin_bottom = 531.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapBg" type="Sprite" parent="CamParent/CamItself"]
position = Vector2( 788.095, 375.256 )
scale = Vector2( 0.933877, 0.933877 )
texture = ExtResource( 7 )

[node name="Cam1" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = -243.264
margin_top = -82.9961
margin_right = -192.264
margin_bottom = -39.9961
texture_normal = ExtResource( 21 )
texture_focused = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam2" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = -145.959
margin_top = -11.4478
margin_right = -94.9586
margin_bottom = 31.5522
texture_normal = ExtResource( 25 )
texture_focused = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam3" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = -4.76984
margin_top = -25.7574
margin_right = 46.2302
margin_bottom = 17.2426
texture_normal = ExtResource( 19 )
texture_focused = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam4" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = 6.10352e-05
margin_top = 102.076
margin_right = 51.0001
margin_bottom = 145.076
texture_normal = ExtResource( 20 )
texture_focused = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam5" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = 67.7325
margin_top = -41.9751
margin_right = 118.733
margin_bottom = 1.02493
texture_normal = ExtResource( 15 )
texture_focused = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam6" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = 67.7325
margin_top = 66.7785
margin_right = 118.733
margin_bottom = 109.778
texture_normal = ExtResource( 17 )
texture_focused = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Generator" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = -59.4288
margin_top = -208.901
margin_right = 210.571
margin_bottom = -67.9011
texture_normal = ExtResource( 43 )
texture_pressed = ExtResource( 44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Discharge" type="Timer" parent="CamParent/CamItself/MapBg/Generator"]
wait_time = 2.0
autostart = true

[node name="Charge" type="Label" parent="CamParent/CamItself/MapBg/Generator"]
margin_left = 182.788
margin_top = 91.8445
margin_right = 254.788
margin_bottom = 136.844
custom_fonts/font = SubResource( 12 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="TextureButton" parent="CamParent/CamItself/MapBg"]
margin_left = -223.813
margin_top = -257.248
margin_right = -83.8132
margin_bottom = -214.248
texture_normal = ExtResource( 56 )
texture_focused = ExtResource( 57 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamVP" type="AnimatedSprite" parent="CamParent/CamItself"]
position = Vector2( 283.864, 262.054 )
scale = Vector2( 0.329844, 0.329844 )
frames = SubResource( 13 )
animation = "cam_01"

[node name="Label" type="Label" parent="CamParent/CamItself/CamVP"]
margin_left = 821.0
margin_top = -760.0
margin_right = 2188.0
margin_bottom = -627.0
custom_fonts/font = SubResource( 14 )
text = "Комната родителей"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="AnimatedSprite" parent="CamParent/CamItself/CamVP"]
visible = false
position = Vector2( -444.055, 434.96 )
scale = Vector2( 0.4563, 0.4563 )
frames = SubResource( 15 )

[node name="Milka" type="AnimatedSprite" parent="CamParent/CamItself/CamVP"]
visible = false
position = Vector2( 442.534, 379.547 )
frames = SubResource( 16 )

[node name="Masya" type="AnimatedSprite" parent="CamParent/CamItself/CamVP"]
visible = false
position = Vector2( -211.757, 249.184 )
scale = Vector2( 2.80925, 2.80925 )
frames = SubResource( 17 )

[node name="JumpScare" type="AnimatedSprite" parent="CamParent"]
visible = false
position = Vector2( 535.812, 236.668 )
scale = Vector2( 1.74056, 1.74056 )
frames = SubResource( 18 )
animation = "Masya"

[node name="GenAlert" type="AnimatedSprite" parent="CamParent"]
position = Vector2( 54.8309, 488.759 )
frames = SubResource( 19 )

[node name="HourClk" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="MoveClk" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="DIEBITCH1" type="Timer" parent="."]
wait_time = 5.0

[node name="DIEBITCH2" type="Timer" parent="."]
wait_time = 10.0

[node name="DIEBITCH3" type="Timer" parent="."]
wait_time = 30.0

[node name="DIEBITCH4" type="Timer" parent="."]
wait_time = 30.0

[node name="DIEBITCH5" type="Timer" parent="."]
wait_time = 30.0

[node name="ResetAudio" type="Timer" parent="."]
one_shot = true

[node name="MovGameOver" type="Timer" parent="."]
wait_time = 2.0

[node name="camFollowmer" type="Area2D" parent="."]

[node name="PhoneCall1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 48 )
autoplay = true

[node name="AmbientDanger" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 31 )
volume_db = -13.127

[node name="InOffice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )

[node name="Ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
volume_db = -11.107

[node name="JumpscareSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )
volume_db = 4.561

[node name="JumpscareSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 55 )
volume_db = 4.561

[node name="GopDistractor" type="AudioStreamPlayer" parent="."]

[node name="CrouchButton" type="TextureButton" parent="."]
margin_left = 1656.0
margin_top = 456.0
margin_right = 2168.0
margin_bottom = 520.0
texture_normal = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CrouchButton"]
margin_left = 0.964111
margin_top = -5.66791
margin_right = 511.964
margin_bottom = 64.3321
custom_fonts/font = SubResource( 11 )
text = "Пригнуться"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnButton" type="TextureButton" parent="."]
margin_left = 155.0
margin_right = 667.0
margin_bottom = 64.0
texture_normal = ExtResource( 49 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TurnButton"]
margin_left = 96.0
margin_right = 436.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 20 )
text = "Оглянуться"
[connection signal="toggled" from="DoorButton" to="." method="_on_DoorButton_toggled"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam1" to="." method="_on_Cam1_pressed"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam2" to="." method="_on_Cam2_pressed"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam3" to="." method="_on_Cam3_pressed"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam4" to="." method="_on_Cam4_pressed"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam5" to="." method="_on_Cam5_pressed"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Cam6" to="." method="_on_Cam6_pressed"]
[connection signal="button_down" from="CamParent/CamItself/MapBg/Generator" to="." method="_on_Generator_button_down"]
[connection signal="timeout" from="CamParent/CamItself/MapBg/Generator/Discharge" to="." method="_on_Discharge_timeout"]
[connection signal="pressed" from="CamParent/CamItself/MapBg/Audio" to="." method="_on_Audio_pressed"]
[connection signal="timeout" from="HourClk" to="." method="_on_HourClk_timeout"]
[connection signal="timeout" from="MoveClk" to="." method="_on_MoveClk_timeout"]
[connection signal="timeout" from="DIEBITCH1" to="." method="_on_DIEBITCH1_timeout"]
[connection signal="timeout" from="DIEBITCH2" to="." method="_on_DIEBITCH2_timeout"]
[connection signal="timeout" from="DIEBITCH3" to="." method="_on_DIEBITCH3_timeout"]
[connection signal="timeout" from="DIEBITCH4" to="." method="_on_DIEBITCH4_timeout"]
[connection signal="timeout" from="DIEBITCH5" to="." method="_on_DIEBITCH5_timeout"]
[connection signal="timeout" from="ResetAudio" to="." method="_on_ResetAudio_timeout"]
[connection signal="timeout" from="MovGameOver" to="." method="_on_MovGameOver_timeout"]
[connection signal="finished" from="PhoneCall1" to="." method="_on_PhoneCall1_finished"]
[connection signal="pressed" from="CrouchButton" to="." method="_on_CrouchButton_pressed"]
[connection signal="pressed" from="TurnButton" to="." method="_on_TurnButton_pressed"]
